part2/2_10/manifests/service-todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-application
  name: todo-backend-scv
spec:
  type: ClusterIP
  selector:
    app: todolist-backend
  ports:
    - name: todolist-backend
      port: 3001
      protocol: TCP
      targetPort: 3001
